test/expected/define_aui-c17.out
define SI as auto int
             ^
14: error: "typedef auto int" is illegal for built-in type
